--- a/git/config
+++ b/git/config
@@ -15,3 +15,19 @@
 insteadOf = https://gitlab.opt.kyt/
 [remote "origin"]
 	prune = true
+
+[alias]
+    s = status
+    co = checkout
+	ps = push
+	pl = pull
+	psf = push -f
+	cob = checkout -b
+	del = branch -D
+	amend = commit --amend --no-edit
+	last  = log -1
+	l = log --pretty=format:'%C(auto)%h %C(red)%as %C(blue)%aN%C(auto)%d%C(green) %s' 
+    lo = log --oneline
+    l5 = log --oneline -5
+	untrack = rm --cached
+	unadd = restore --staged
