--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,3 +6,10 @@ enabled_layouts *
 
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+enter new_window_with_cwd
+
+disable_ligatures never
+
+font_family JetBrains Mono Regular
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
