--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,6 +6,9 @@ enabled_layouts *
 
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+enter new_window_with_cwd
+map ctrl+shift+l next_tab
+map ctrl+shift+h previous_tab 
+
 
 disable_ligatures never
 
