--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,6 +8,7 @@ map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+l next_tab
 map ctrl+shift+h previous_tab 
+map ctrl+shift+k next_layout 
 
 
 disable_ligatures never
@@ -16,3 +17,6 @@ font_family JetBrains Mono Regular
 bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
 bold_italic_font JetBrains Mono Bold Italic
+
+background_opacity 0.9
+background_blur 64
