--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-# See https://wiki.hyprland.org/Configuring/Monitors/
+#4ja3as See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1
 
 
@@ -18,9 +18,16 @@ $menu = wofi --show drun
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
 # Autostart
+exec-once=waybar
+exec-once=nm-applet --indicator
+exec-once=swaync
+exec-once=hyprland-per-window-layout
 exec-once=eww daemon
+exec-once=~/dotfiles/scripts/background.sh
+exec-once=wl-paste --watch cliphist store
+
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -83,7 +90,8 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 6, myBezier
+	animation = specialWorkspace, 1, 6, default, slidefadevert -50%
 }
 
 dwindle {
@@ -125,55 +133,5 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo,
-bind = $mainMod, J, togglesplit, # dwindle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
+# Imports
+source = ~/.config/hypr/binds.conf
