--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -55,10 +55,15 @@ bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, q, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, w, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, e, movetoworkspace, 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, r, movetoworkspace, 4
 bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, t, movetoworkspace, 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
@@ -68,6 +73,10 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, G, togglespecialworkspace, graph
+bind = $mainMod SHIFT, G, movetoworkspace, special:graph
+bind = $mainMod, M, togglespecialworkspace, toolbox
+bind = $mainMod SHIFT, M, movetoworkspace, special:toolbox
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
