--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,6 +27,8 @@ exec-once=hyprland-per-window-layout
 exec-once=eww daemon
 exec-once=~/dotfiles/scripts/background.sh
 exec-once=wl-paste --watch cliphist store
+exec-once = [workspace special:toolbox silent] kitty --session toolbox.conf
+exec-once = [workspace special:graph silent] telegram-desktop
 
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -90,7 +92,7 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, myBezier
+    animation = workspaces, 1, 6, default
 	animation = specialWorkspace, 1, 6, default, slidefadevert -50%
 }
 
@@ -129,6 +131,8 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+#Workspaces rules
+workspace = special:toolbox, rounding:false, decorate:false, border:false
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
