--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,7 +9,9 @@ map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+l next_tab
 map ctrl+shift+h previous_tab 
 map ctrl+shift+k next_layout 
-
+map ctrl+shift+f toggle_fullscreen
+map ctrl+shift+j next_window
+map ctrl+shift+k previous_window
 
 disable_ligatures never
 
