--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -8,7 +8,7 @@ map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+l next_tab
 map ctrl+shift+h previous_tab 
-map ctrl+shift+k next_layout 
+map ctrl+shift+m next_layout 
 map ctrl+shift+f toggle_fullscreen
 map ctrl+shift+j next_window
 map ctrl+shift+k previous_window
