📺 better monitor confs

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -1,11 +1,3 @@
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
-$alt = ALT
-
-# Set programs that you use
-$terminal = kitty
-$fileManager = nautilus
-$menu = fuzzel
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive, 
@@ -14,7 +6,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit, # dwindle
-bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = $mainMod SHIFT, P, exec, flameshot gui
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -36,8 +28,8 @@ bind = $mainMod SHIFT, j, movewindow, d
 # Device controls
 bindle = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 bindle = ,XF86MonBrightnessUp, exec, brightnessctl s +10%
-bindle = ,XF86AudioRaiseVolume, exec, pamixer -i 5 
-bindle = ,XF86AudioLowerVolume, exec, pamixer -d 5 
+bindle = ,XF86AudioRaiseVolume, exec, wpctl set-volume  @DEFAULT_SINK@ 5%+ 
+bindle = ,XF86AudioLowerVolume, exec, wpctl set-volume  @DEFAULT_SINK@ 5%-
 bind = ,XF86AudioMute, exec, pactl -- set-sink-mute 0 toggle
 bind = ,XF86AudioMicMute, exec, pactl -- set-source-mute 0 toggle
 
