--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 #4ja3as See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
-
+monitor=eDP-1,3120x2080@60 ,auto-right,1.6
+monitor=DP-1,preferred,auto-left,auto
+# monitor = , preferred, auto, 1, mirror, eDP-1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -10,25 +11,41 @@ monitor=,preferred,auto,1
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
+$mainMod = SUPER
+$alt = ALT
 # Set programs that you use
 $terminal = kitty
-$fileManager = nautilus
-$menu = wofi --show drun
+$fileManager = nemo
+$menu = fuzzel
 
 # Some default env vars.
-env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
+env = GTK_THEME,kanagawa
+env = GTK_ICON_THEME=Papirus
+env = XCURSOR_THEME,Quintom_Ink
+env = XCURSOR_SIZE,20
+env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = GTK_USE_PORTAL,1
+
 # Autostart
 exec-once=waybar
 exec-once=nm-applet --indicator
-exec-once=swaync
+exec-once=dunst
 exec-once=hyprland-per-window-layout
 exec-once=eww daemon
 exec-once=~/dotfiles/scripts/background.sh
 exec-once=wl-paste --watch cliphist store
 exec-once = [workspace special:toolbox silent] kitty --session toolbox.conf
 exec-once = [workspace special:graph silent] telegram-desktop
+exec-once = [workspace special:magic silent] firefox
+exec-once = [workspace 1] google-chrome-stable
+exec-once = [workspace 2] kitty --start-as fullscreen
+exec-once = ~/kyt/connect.sh 
+exec-once = hyprctl setcursor Quintom_Ink 20
+exec-once = dconf write /org/gnome/desktop/interface/icon-theme "'Papirus'"
+exec-once = dconf write /org/gtk/settings/file-chooser/file-chooser "'nemo'"
+exec-once = flameshot
 
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -73,11 +90,6 @@ decoration {
         size = 3
         passes = 1
     }
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -87,13 +99,13 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
+    animation = fade, 1, 7, default
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-	animation = specialWorkspace, 1, 6, default, slidefadevert -50%
+    animation = workspaces, 1, 6, default, slide
+	animation = specialWorkspace, 1, 4, default, fade
 }
 
 dwindle {
@@ -104,7 +116,6 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
 }
 
 gestures {
@@ -130,6 +141,10 @@ device {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = bordercolor rgba(E6C384ff) rgba(DCA561ff) 45deg, class:(nemo)
+windowrulev2 = bordercolor rgba(E6C384ff) rgba(DCA561ff) 45deg, class:(firefox)
+# windowrulev2 = bordercolor rgba(E6C384ff) rgba(DCA561ff) 45deg, class:(Google-chrome)
+windowrulev2 = noborder, class:(Google-chrome)
 
 #Workspaces rules
 workspace = special:toolbox, rounding:false, decorate:false, border:false
