--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -6,7 +6,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod SHIFT, P, exec, flameshot gui
+# bind = $mainMod SHIFT, P, exec, XDG_CURRENT_DESKTOP=sway QT_SCALE_FACTOR=0.625 flameshot gui
+bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -30,6 +31,7 @@ bindle = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 bindle = ,XF86MonBrightnessUp, exec, brightnessctl s +10%
 bindle = ,XF86AudioRaiseVolume, exec, wpctl set-volume  @DEFAULT_SINK@ 5%+ 
 bindle = ,XF86AudioLowerVolume, exec, wpctl set-volume  @DEFAULT_SINK@ 5%-
+bindle = ,XF86AudioMute, exec, wpctl set-volume  @DEFAULT_SINK@ 0%
 bind = ,XF86AudioMute, exec, pactl -- set-sink-mute 0 toggle
 bind = ,XF86AudioMicMute, exec, pactl -- set-source-mute 0 toggle
 
@@ -69,13 +71,15 @@ bind = $mainMod, G, togglespecialworkspace, graph
 bind = $mainMod SHIFT, G, movetoworkspace, special:graph
 bind = $mainMod, M, togglespecialworkspace, toolbox
 bind = $mainMod SHIFT, M, movetoworkspace, special:toolbox
+bind = $mainMod, F, togglespecialworkspace, downside
+bind = $mainMod SHIFT, F, movetoworkspace, special:downside
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-bind = $mainMod $alt, l, workspace, e+1
-bind = $mainMod $alt, h, workspace, e-1
+bind = $mainMod $alt, l, workspace, +1
+bind = $mainMod $alt, h, workspace, -1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
