--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,6 +1,8 @@
 #4ja3as See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,3120x2080@60 ,auto-right,1.6
-monitor=DP-1,preferred,auto-left,auto
+monitor=eDP-1,highres@60, auto-up,1.6
+monitor=HDMI-A-1,highres@90, auto-right,auto
+monitor=DP-1,preferred,auto-up,auto
+monitor=DP-3,preferred,auto-up,auto
 # monitor = , preferred, auto, 1, mirror, eDP-1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -15,18 +17,18 @@ $mainMod = SUPER
 $alt = ALT
 # Set programs that you use
 $terminal = kitty
-$fileManager = nemo
+$fileManager = nautilus
 $menu = fuzzel
 
 # Some default env vars.
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
 env = GTK_THEME,kanagawa
 env = GTK_ICON_THEME=Papirus
+env = GTK_USE_PORTAL,1
 env = XCURSOR_THEME,Quintom_Ink
 env = XCURSOR_SIZE,20
 env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt5ct
-env = GTK_USE_PORTAL,1
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 # Autostart
 exec-once=waybar
@@ -57,7 +59,8 @@ input {
     kb_rules =
 
     follow_mouse = 1
-
+	mouse_refocus = false
+	float_switch_override_focus = 0
     touchpad {
         natural_scroll = yes
     }
@@ -87,8 +90,11 @@ decoration {
     
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 5
+		passes = 3
+		new_optimizations = true
+		xray = true
+		ignore_opacity = true
     }
 }
 
@@ -143,8 +149,18 @@ device {
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = bordercolor rgba(E6C384ff) rgba(DCA561ff) 45deg, class:(nemo)
 windowrulev2 = bordercolor rgba(E6C384ff) rgba(DCA561ff) 45deg, class:(firefox)
+windowrulev2 = bordercolor rgba(791F8AFF) rgba(a745bbff) 45deg, class:(obsidian)
+# noanim isn't necessary but animations with these rules might look bad. use at your own discretion.
+windowrule = noanim, class:^(flameshot)$
+windowrule = float, class:^(flameshot)$
+windowrule = move 0 0, class:^(flameshot)$
+windowrule = pin, class:^(flameshot)$
+# set this to your leftmost monitor id, otherwise you have to move your cursor to the leftmost monitor
+# before executing flameshot
+windowrule = monitor 1, class:^(flameshot)$
 # windowrulev2 = bordercolor rgba(E6C384ff) rgba(DCA561ff) 45deg, class:(Google-chrome)
 windowrulev2 = noborder, class:(Google-chrome)
+windowrulev2 = opacity 0.90 0.90,class:(Google-chrome)
 
 #Workspaces rules
 workspace = special:toolbox, rounding:false, decorate:false, border:false
