--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -2,10 +2,12 @@
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive, 
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, Y, togglefloating, 
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, U, togglegroup, # dwindle
+bind = $mainMod, V, changegroupactive, # dwindle
 # bind = $mainMod SHIFT, P, exec, XDG_CURRENT_DESKTOP=sway QT_SCALE_FACTOR=0.625 flameshot gui
 bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | wl-copy
 
