--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 #4ja3as See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,highres@60, auto-up,1.6
+monitor=eDP-1,highres@120, auto-up,1.6
 monitor=HDMI-A-1,highres@90, auto-right,auto
 monitor=DP-1,preferred,auto-up,auto
 monitor=DP-3,preferred,auto-up,auto
@@ -29,18 +29,19 @@ env = XCURSOR_THEME,Quintom_Ink
 env = XCURSOR_SIZE,20
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
+env = ELECTRON_OZONE_PLATFORM_HINT, true
 
 # Autostart
 exec-once=waybar
 exec-once=nm-applet --indicator
-exec-once=dunst
+exec-once=swaync
 exec-once=hyprland-per-window-layout
 exec-once=eww daemon
 exec-once=~/dotfiles/scripts/background.sh
 exec-once=wl-paste --watch cliphist store
 exec-once = [workspace special:toolbox silent] kitty --session toolbox.conf
-exec-once = [workspace special:graph silent] telegram-desktop
-exec-once = [workspace special:magic silent] firefox
+exec-once = [workspace special:graph] Telegram
+exec-once = [workspace special:magic] firefox
 exec-once = [workspace 1] google-chrome-stable
 exec-once = [workspace 2] kitty --start-as fullscreen
 exec-once = ~/kyt/connect.sh 
@@ -49,6 +50,10 @@ exec-once = dconf write /org/gnome/desktop/interface/icon-theme "'Papirus'"
 exec-once = dconf write /org/gtk/settings/file-chooser/file-chooser "'nemo'"
 exec-once = flameshot
 
+
+dwindle {
+	pseudotile = false
+}
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -72,7 +77,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -115,19 +120,11 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
 }
 
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-}
-
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = on
-}
+gesture = 3, horizontal, workspace
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
