👒 prettify hypr configs

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -1,3 +1,6 @@
+$mainMod = SUPER
+$alt = ALT
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive, 
