--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,55 +1,17 @@
-#4ja3as See https://wiki.hyprland.org/Configuring/Monitors/
+# Set programs that you use
+$terminal = kitty
+$fileManager = nautilus
+$menu = walker
+
+# Imports
+source = ~/.config/hypr/binds.conf
+source = ~/.config/hypr/autostart.conf
+source = ~/.config/hypr/env.conf
+
 monitor=eDP-1,highres@120, auto-up,1.6
 monitor=HDMI-A-1,highres@90, auto-right,auto
 monitor=DP-1,preferred,auto-up,auto
 monitor=DP-3,preferred,auto-up,auto
-# monitor = , preferred, auto, 1, mirror, eDP-1
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
-$mainMod = SUPER
-$alt = ALT
-# Set programs that you use
-$terminal = kitty
-$fileManager = nautilus
-$menu = fuzzel
-
-# Some default env vars.
-env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
-env = GTK_THEME,kanagawa
-env = GTK_ICON_THEME=Papirus
-env = GTK_USE_PORTAL,1
-env = XCURSOR_THEME,Quintom_Ink
-env = XCURSOR_SIZE,20
-env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt6ct
-env = ELECTRON_OZONE_PLATFORM_HINT, true
-
-# Autostart
-exec-once=waybar
-exec-once=nm-applet --indicator
-exec-once=swaync
-exec-once=hyprland-per-window-layout
-exec-once=eww daemon
-exec-once=~/dotfiles/scripts/background.sh
-exec-once=wl-paste --watch cliphist store
-exec-once = [workspace special:toolbox silent] kitty --session toolbox.conf
-exec-once = [workspace special:graph] Telegram
-exec-once = [workspace special:magic] firefox
-exec-once = [workspace 1] google-chrome-stable
-exec-once = [workspace 2] kitty --start-as fullscreen
-exec-once = ~/kyt/connect.sh 
-exec-once = hyprctl setcursor Quintom_Ink 20
-exec-once = dconf write /org/gnome/desktop/interface/icon-theme "'Papirus'"
-exec-once = dconf write /org/gtk/settings/file-chooser/file-chooser "'nemo'"
-exec-once = flameshot
-
 
 dwindle {
 	pseudotile = false
@@ -164,6 +126,3 @@ workspace = special:toolbox, rounding:false, decorate:false, border:false
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
-
-# Imports
-source = ~/.config/hypr/binds.conf
