--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,11 +14,13 @@ map ctrl+shift+j next_window
 map ctrl+shift+k previous_window
 
 disable_ligatures never
-
-font_family JetBrains Mono Regular
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
-
 background_opacity 0.9
 background_blur 64
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="JetBrainsMono Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
