--- a/kitty/toolbox.conf
+++ b/kitty/toolbox.conf
@@ -2,5 +2,5 @@ enabled_layouts tall:bias=50;full_size=1;mirrored=false
 launch --location=vsplit
 launch tty-clock -cs
 launch --location=vsplit
-launch tomato
+launch fastfetch
 
